# signature-nodes

./: .editorconfig  .env.example  .gitattributes  .isort.cfg  .pre-commit-config.yaml  404.html  Makefile  README.md  __init__.py  env.py  index.html  mkdocs.yml  pyproject.toml  release.config.js  renovate.json  requirements.txt  utils.py  version.py
.github/: pull_request_template.md
.github/workflows/: deploy.yml  publish.yml  security-checks.yml  steps-post-comment.yml
docs/: index.md
docs/nodes/: agent.md  agent_memory.md  agent_response_post_process.md  agent_response_validators.md  agent_tools.md  any.md  audio.md  augmentation.md  augmentations.md  clearml.md  data.md  dicts.md  dist.md  dojo.md  embeddings.md  evaluation.md  file.md  graph.md  image.md  image_processing.md  labs.md  lists.md  llm.md  loaders.md  logic.md  lora.md  mask.md  math.md  models.md  neurochain_utils.md  numbers.md  platform_io.md  primitives.md  s3.md  segmentation.md  storage.md  tabular.md  text.md  utils.md  vectorstore.md  (+1 more)
nodes/: augmentations.py  categories.py  data.py  file.py  image.py  image_processing.py  logic.py  lora.py  mask.py  models.py  numbers.py  otsu.py  platform_io.py  primitives.py  shared.py  text.py  utils.py  wrapper.py
nodes/agent/: index.html
nodes/agent_memory/: index.html
nodes/agent_response_post_process/: index.html
nodes/agent_response_validators/: index.html
nodes/agent_tools/: index.html
nodes/any/: index.html
nodes/audio/: index.html
nodes/augmentation/: index.html
nodes/augmentations/: index.html
nodes/clearml/: index.html
nodes/core/augmentations/: blur_augmentation.py  brightness_contrast_augmentation.py  compose_augmentation.py  cutout_augmentation.py  distortion_augmentation.py  flip_augmentation.py  grid_augmentation.py  perspective_augmentation.py  quality_augmentation.py  random_crop_augmentation.py  rotation_augmentation.py  shift_scale_augmentation.py
nodes/core/data/: delete_dict_key.py  dict_2_json.py  dict_2_toml.py  dict_2_yaml.py  get_dict_value.py  get_image_list_item.py  get_list_item.py  json_2_dict.py  set_dict_value.py  toml_2_dict.py  yaml_2_dict.py
nodes/core/file/: base64_from_image.py  file_2_image_list.py  file_2_list.py  file_loader.py  folder_loader.py  image_from_base64.py  image_from_web.py  shared.py
nodes/core/image/: get_image_shape.py  image_average.py  image_base_color.py  image_batch_2_list.py  image_gaussian_blur.py  image_list_2_batch.py  image_soft_light.py  image_subtract.py  image_transpose.py  image_unsharp_mask.py
nodes/core/image_processing/: auto_crop.py  cutout.py  guided_random_crop.py  rescale.py  resize.py  resize_with_megapixels.py  rotate.py  upscale_image.py
nodes/core/logic/: blocker.py  compare.py  do_while_loop_end.py  do_while_loop_start.py  for_loop_end.py  for_loop_start.py  shared.py  switch.py
nodes/core/lora/: apply_lora_stack.py  dict_2_lora_stack.py  lora_stack.py  lora_stacker.py  save_lora_captions.py
nodes/core/mask/: base_mask.py  get_mask_shape.py  mask_2_trimap.py  mask_binary_filter.py  mask_bitwise.py  mask_distance.py  mask_gaussian_blur.py  mask_grow_with_blur.py  mask_invert.py  mask_morphology.py  mask_preview.py
nodes/core/models/: background_removal.py  get_model_url.py  unblur.py  (+1 more)
nodes/data/: index.html
nodes/dicts/: index.html
nodes/dojo/: create_training_run.py  index.html  start_training_run.py  utils.py
nodes/embeddings/: index.html
nodes/evaluation/: index.html
nodes/file/: index.html
nodes/graph/: index.html
nodes/image/: index.html
nodes/image_processing/: index.html
nodes/labs/: index.html
nodes/lists/: index.html
nodes/llm/: index.html
nodes/loaders/: index.html
nodes/logic/: index.html
nodes/lora/: index.html
nodes/mask/: index.html
nodes/math/: index.html
nodes/models/: index.html
nodes/neurochain/: florence_utils.py  utils.py
nodes/neurochain_utils/: index.html
nodes/numbers/: index.html
nodes/platform_io/: index.html
nodes/primitives/: index.html
nodes/s3/: index.html
nodes/segmentation/: index.html
nodes/storage/: index.html
nodes/tabular/: index.html
nodes/text/: index.html
nodes/utils/: index.html
nodes/vectorstore/: index.html
nodes/web/: all_nodes.js  bug_report.js  contextmenu.js  do_while_loop.js  dynamic_input_amount.js  feature_request.js  file_upload.js  florence2.js  get_embeddings.js  json_schema_builder.js  logic.js  logic_nodes.js  loops.js  lora.js  platform_io.js  platform_io_functional.js  platform_io_style.js  setgetnodes.js  signature.js  visual.js  workflow.js
nodes/wrapper/: index.html
scripts/: generate_docs.py
search/: search_index.json
services/: signature_flow_service.py  signature_model_service.py
src/signature_nodes/: env.py  logic.py  otsu.py  shared.py  utils.py  version.py
tests/: calculator.py  test_calculator.py
(+306 files in other folders)
