[project]
name = "signature-nodes"
dynamic = ["version"]
description = "Signature Nodes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.95",
    "httpx>=0.25.0",
    "huggingface-hub>=0.26.2",
    "jq>=1.8.0",
    "matplotlib>=3.10.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.2",
    "spandrel>=0.4.1",
    "tomli-w>=1.1.0",
    "torch>=2.5.1",
    "transformers>=4.46.3",
    "uuid7>=0.1.0",
    "neurochain==2.0.0.dev5",
    "signature-flows==1.0.5.dev4",
    "signature-core==1.0.0.dev5",
]

[dependency-groups]
dev = [
    "bandit>=1.8.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.6",
]
doc = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "coverage>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=./ --cov-report=xml"
python_files = ["test_*.py"]

[tool.ruff]
line-length = 120

# Set of rules taken from https://docs.astral.sh/ruff/linter/#rule-selection
# Default rules here: https://docs.astral.sh/ruff/configuration/
[tool.ruff.lint]
select = [
    "E",  # pycodestyle
    "F",  # Pyflakes
    "I",  # isort
]

[tool.bandit]
skips = ["B113", "B311", "B101"]
assert_used.skips = ["**/test_*.py"]

[tool.setuptools]
packages = ["nodes", "services"]

[tool.uv.sources]
neurochain = { index = "signature" }

[[tool.uv.index]]
name = "signature"
url = "https://signature-ml-packages-production-992382511592.d.codeartifact.eu-west-1.amazonaws.com/pypi/signature-ml/simple/"
explicit = true
publish = false

[tool.setuptools.dynamic]
version = {attr = "version.__version__"}

[[tool.uv.index]]
url = "https://pypi.org/"
default = true
